add french animal net services sites

--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -968,6 +968,7 @@ fra:
         mammalia_reproduction_method_embryo_transplant: "Transplantation embryonaire"
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
         manganese_concentration: "Teneur en Manganèse"
+        mass_area_density: "masse par unité de surface"
         mass_area_yield: "Rendement de masse surfacique"
         maximal_storable_easement_area: "Capacité de stockage surfacique maximale (emprise au sol)"
         maximal_storable_net_mass: "Capacité de stockage massique maximale"
@@ -979,6 +980,7 @@ fra:
         net_mass: "Masse nette"
         net_surface_area: "Surface nette"
         net_volume: "Volume net"
+        nitrogen_area_density: "unité d'azote par unité de surface"
         nitrogen_concentration: "Teneur en azote"
         nominal_storable_easement_area: "Capacité de stockage surfacique nominale (emprise au sol)"
         nominal_storable_net_mass: "Capacité de stockage massique nominale"
@@ -3228,9 +3230,12 @@ fra:
     net_service:
       reference_name:
         charentes_alliance_extranet: "Charentes alliance extranet"
+        est_elevage: "Est élevage"
         lilco: "Lilco"
         msa: "Msa"
+        selso: "Selso"
         synel: "Synel"
+        synest: "Synel Est"
         telepac: "Telepac"
     operation_task:
       nature:
@@ -4761,7 +4766,7 @@ fra:
         male_young_cow: "Taurillon"
         manager: "Responsable"
         manure_division: "Zone fumière"
-        mechanic: "Mécanisien"
+        mechanic: "Mécanicien"
         mechanic_item: "Pièce mécanique"
         milk: "Lait"
         milk_tank: "Tank à lait"
@@ -5586,6 +5591,7 @@ fra:
         mammalia_reproduction_method_embryo_transplant: "Transplantation embryonaire"
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
         manganese_concentration: "Teneur en Manganèse"
+        mass_area_density: "masse par unité de surface"
         mass_area_yield: "Rendement de masse surfacique"
         maximal_storable_easement_area: "Capacité de stockage surfacique maximale (emprise au sol)"
         maximal_storable_net_mass: "Capacité de stockage massique maximale"
@@ -5597,6 +5603,7 @@ fra:
         net_mass: "Masse nette"
         net_surface_area: "Surface nette"
         net_volume: "Volume net"
+        nitrogen_area_density: "unité d'azote par unité de surface"
         nitrogen_concentration: "Teneur en azote"
         nominal_storable_easement_area: "Capacité de stockage surfacique nominale (emprise au sol)"
         nominal_storable_net_mass: "Capacité de stockage massique nominale"
@@ -5681,6 +5688,7 @@ fra:
         mammalia_reproduction_method_embryo_transplant: "Transplantation embryonaire"
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
         manganese_concentration: "Teneur en Manganèse"
+        mass_area_density: "masse par unité de surface"
         mass_area_yield: "Rendement de masse surfacique"
         maximal_storable_easement_area: "Capacité de stockage surfacique maximale (emprise au sol)"
         maximal_storable_net_mass: "Capacité de stockage massique maximale"
@@ -5692,6 +5700,7 @@ fra:
         net_mass: "Masse nette"
         net_surface_area: "Surface nette"
         net_volume: "Volume net"
+        nitrogen_area_density: "unité d'azote par unité de surface"
         nitrogen_concentration: "Teneur en azote"
         nominal_storable_easement_area: "Capacité de stockage surfacique nominale (emprise au sol)"
         nominal_storable_net_mass: "Capacité de stockage massique nominale"
@@ -6013,6 +6022,7 @@ fra:
         mammalia_reproduction_method_embryo_transplant: "Transplantation embryonaire"
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
         manganese_concentration: "Teneur en Manganèse"
+        mass_area_density: "masse par unité de surface"
         mass_area_yield: "Rendement de masse surfacique"
         maximal_storable_easement_area: "Capacité de stockage surfacique maximale (emprise au sol)"
         maximal_storable_net_mass: "Capacité de stockage massique maximale"
@@ -6024,6 +6034,7 @@ fra:
         net_mass: "Masse nette"
         net_surface_area: "Surface nette"
         net_volume: "Volume net"
+        nitrogen_area_density: "unité d'azote par unité de surface"
         nitrogen_concentration: "Teneur en azote"
         nominal_storable_easement_area: "Capacité de stockage surfacique nominale (emprise au sol)"
         nominal_storable_net_mass: "Capacité de stockage massique nominale"
@@ -6108,6 +6119,7 @@ fra:
         mammalia_reproduction_method_embryo_transplant: "Transplantation embryonaire"
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
         manganese_concentration: "Teneur en Manganèse"
+        mass_area_density: "masse par unité de surface"
         mass_area_yield: "Rendement de masse surfacique"
         maximal_storable_easement_area: "Capacité de stockage surfacique maximale (emprise au sol)"
         maximal_storable_net_mass: "Capacité de stockage massique maximale"
@@ -6119,6 +6131,7 @@ fra:
         net_mass: "Masse nette"
         net_surface_area: "Surface nette"
         net_volume: "Volume net"
+        nitrogen_area_density: "unité d'azote par unité de surface"
         nitrogen_concentration: "Teneur en azote"
         nominal_storable_easement_area: "Capacité de stockage surfacique nominale (emprise au sol)"
         nominal_storable_net_mass: "Capacité de stockage massique nominale"
