--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -1066,7 +1066,7 @@ fra:
         mammalia_reproduction_method_embryo_transplant: "Transplantation embryonaire"
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
         manganese_concentration: "Teneur en Manganèse"
-        # mass_area_density: "Mass area density"
+        mass_area_density: "masse par unité de surface"
         mass_area_yield: "Rendement de masse surfacique"
         maximal_storable_easement_area: "Capacité de stockage surfacique maximale (emprise au sol)"
         maximal_storable_net_mass: "Capacité de stockage massique maximale"
@@ -1078,7 +1078,7 @@ fra:
         net_mass: "Masse nette"
         net_surface_area: "Surface nette"
         net_volume: "Volume net"
-        # nitrogen_area_density: "Nitrogen area density"
+        nitrogen_area_density: "unité d'azote par unité de surface"
         nitrogen_concentration: "Teneur en azote"
         nominal_storable_easement_area: "Capacité de stockage surfacique nominale (emprise au sol)"
         nominal_storable_net_mass: "Capacité de stockage massique nominale"
@@ -1262,27 +1262,30 @@ fra:
     net_services:
       # name: "Net services"
       attributes:
-        # approach: "Approach"
-        # identifiers: "Identifiers"
-        # nature: "Nature"
-        # url: "Url"
+        approach: "Approche"
+        identifiers: "Identifiants"
+        nature: "Type"
+        url: "Url"
       choices:
         approach:
-          # email: "Email"
-          # human: "Human"
-          # rest: "Rest"
-          # soap: "Soap"
+          email: "Email"
+          human: "Humaine"
+          rest: "Rest"
+          soap: "Soap"
         # nature: # Choices comes from nomenclature: activity_families
       items:
         charentes_alliance_extranet: "Charentes alliance extranet"
+        est_elevage: "Est élevage"
         lilco: "Lilco"
         msa: "Msa"
+        selso: "Selso"
         synel: "Synel"
+        synest: "Synel Est"
         telepac: "Telepac"
     nmp_methods:
       # name: "Nmp methods"
       items:
-        # poitou_charentes: "Poitou charentes"
+        poitou_charentes: "Poitou charentes"
     phosphorus_analysis_methods:
       name: "Méthodes d’analyse du phosphore"
       items:
