--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -338,13 +338,13 @@ eng:
       # name: "Familles d’activité"
     analysis_natures:
       attributes:
-        # items: "Items"
-        # target_derivative_of: "Derivé de la cible"
+        # items: "Éléments analysés"
+        # target_derivative_of: "Dérivé de la cible"
         # target_variety: "Variété de la cible"
       choices: #?
       items:
         # cow_milk_analysis: "Analyse de lait de vache"
-      # name: "Type d'analyse"
+      # name: "Types d’analyse"
     animal_life_states:
       items:
         # aging: "Adulte"
@@ -359,12 +359,13 @@ eng:
       # name: "Méthodes d’analyse de la capacité d’échange cationique"
     charts_of_accounts:
       items:
-        # fr_pcg82: "Plan comptable pcg82"
-        # fr_pcga: "Plan comptable agricole pcga"
+        # fr_pcg82: "Plan comptable (PCG1982)"
+        # fr_pcga: "Plan comptable agricole (PCGA)"
         # ifrs: "IFRS"
       # name: "Plans de comptes"
     countries:
-      attributes: #?
+      attributes:
+        # number: "Numéro"
       items:
         ad: "Andorra"
         ae: "United Arab Emirates"
@@ -1140,7 +1141,7 @@ eng:
         # pacage_number: "Numéro de PACAGE"
         # password: "Mot de passe"
         # synel_username: "Login Synel"
-      # name: "Type d'identifiant"
+      # name: "Type d’identifiant"
     identifiers: #?
     incidents: #?
     indicators:
@@ -1194,18 +1195,18 @@ eng:
           # whole: "Population"
       item_lists: #?
       items:
-        # aluminium_concentration: "Teneur en Aluminium"
+        # aluminium_concentration: "Teneur en aluminium"
         animal_life_state: "Animal life state"
         # application_width: "Largeur de travail"
-        # available_water_capacity_per_area: "Réserve utile (RU)"
+        # available_water_capacity_per_area: "Réserve utile d’eau (RU)"
         # boron_concentration: "Teneur en Bore"
         # calcium_concentration: "Teneur en Calcium"
-        # calving_ease_index: "Index de facilité de naissane"
+        # calving_ease_index: "Index de facilité de naissance"
         # cation_exchange_capacity: "Capacité d’échange cationique (CEC)"
-        # cation_exchange_capacity_analysis_method: "Méthode d’analyse de la Capacité d’échange cationique (CEC)"
+        # cation_exchange_capacity_analysis_method: "Méthode d’analyse de la capacité d’échange cationique (CEC)"
         cells_concentration: "Cells concentration" #?
         clostridial_spores_concentration: "Clostridial spores concentration"
-        # copper_concentration: "Teneur en Cuivre"
+        # copper_concentration: "Teneur en cuivre"
         # designation_origin: "Appellation"
         # dry_matter_rate: "Taux de matière sèche"
         # easement_area: "Emprise au sol"
@@ -1216,9 +1217,7 @@ eng:
         # fertility_index: "Index de fertilité"
         # figure: "Forme"
         freezing_point_temperature: "Freezing point temperature"
-        # geolocation: "Geolocalisation"
-        # grains_area_density: "Densité de grains par surface"
-        # grains_count: "Nombre de grains"
+        # geolocation: "Géolocalisation"
         ground_appearance: "Ground appearance" #?
         healthy: "Animal disease state"
         # height: "Hauteur"
@@ -1227,33 +1226,31 @@ eng:
         in_production: "In production" #?
         inhibitors_presence: "Inhibitors presence"
         # iron_concentration: "Teneur en Fer"
-        # irrigation_water_input_area_density: "Densité surfacique d’apport d’eau d’irrigation"
+        # irrigation_water_input_area_density: "Densité surfacique d’apport en eau d’irrigation"
         # lactating: "En lactation"
         # last_birth_children_count: "Nombre de nouveaux-nés lors de la dernière naissance"
         # length: "Longueur"
         lipolysis: "Lipolysis"
         # livestock_unit: "Unité de gros bétail (UGB)"
-        # magnesium_concentration: "Teneur en Magnésium"
+        # magnesium_concentration: "Teneur en magnésium"
         # mammalia_birth_condition: "Condition de naissance"
         # mammalia_birth_count: "Cycle de naissance"
         mammalia_lactation_state: "Mammalia lactation state" #?
         # mammalia_reproduction_event_abortion: "Avortement"
         # mammalia_reproduction_method_embryo_transplant: "Transplantation embryonaire"
         mammalia_reproduction_state: "Mammalia reproduction state"
-        # manganese_concentration: "Teneur en Manganèse"
-        # mass_area_density: "masse par unité de surface"
+        # manganese_concentration: "Teneur en manganèse"
         # mass_area_yield: "Rendement de masse surfacique"
         # maximal_storable_easement_area: "Capacité de stockage surfacique maximale (emprise au sol)"
         # maximal_storable_net_mass: "Capacité de stockage massique maximale"
         # maximal_storable_net_volume: "Capacité de stockage volumique maximale"
         # meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
         # milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
-        # molybdenum_concentration: "Teneur en Molybdene"
+        # molybdenum_concentration: "Teneur en molybdène"
         # motor_power: "Puissance du moteur"
-        # net_mass: "Masse nette"
         # net_surface_area: "Surface nette"
         # net_volume: "Volume net"
-        # nitrogen_area_density: "unité d'azote par unité de surface"
+        # nitrogen_area_density: "Unité d’azote par unité de surface"
         # nitrogen_concentration: "Teneur en azote"
         # nominal_storable_easement_area: "Capacité de stockage surfacique nominale (emprise au sol)"
         # nominal_storable_net_mass: "Capacité de stockage massique nominale"
@@ -1293,7 +1290,7 @@ eng:
         # water_content_rate: "Teneur en eau"
         # width: "Largeur"
         # woodstock_variety: "Variété du porte-greffe"
-        # zinc_concentration: "Teneur en Zinc"
+        # zinc_concentration: "Teneur en zinc"
       name: "Name"
     issue_natures:
       attributes:
@@ -1819,7 +1816,7 @@ eng:
         # other_herbicide: "Herbicide autre"
         # ovis_compost: "Compost d’ovin"
         # ovis_manure: "Fumier d’ovin"
-        # oyster_band: "Bande d'huître"
+        # oyster_band: "Bande d’huître"
         # pea_crop: "Culture de pois"
         # pea_seed: "Semence de pois"
         # permanent_meadow_crop: "Culture de prairie permanente"
@@ -1846,7 +1843,7 @@ eng:
         # seed: "Semence"
         # settlement: "Aménagement"
         # silage: "Ensilage"
-        # silage_division: "Zone de stockage de l'ensilage"
+        # silage_division: "Zone de stockage de l’ensilage"
         # silt_land_parcel: "Parcelle limoneuse"
         # silt_schist_land_parcel: "Parcelle limoneuse sur schiste ou gneiss"
         # silty_clay_land_parcel: "Parcelle argilo-limoneuse"
@@ -1993,14 +1990,14 @@ eng:
         # mower: "Faucheuse"
         # natural_water: "Eau de pluie ou de puit"
         # organic_fertilizer: "Engrais organique"
-        # oyster_band: "Bande d'huître"
+        # oyster_band: "Bande d’huître"
         # plow: "Charrue"
         # reaper: "Moissonneuse-batteuse"
         # running_water: "Eau du réseau"
         # salmon_band: "Bande de saumon"
         # seed: "Semence"
         # settlement: "Aménagement"
-        # silage_division: "Zone de stockage de l'ensilage"
+        # silage_division: "Zone de stockage de l’ensilage"
         # small_equipment: "Petit matériel"
         # sower: "Semoir"
         # sprayer: "Pulvérisateur"
@@ -2014,7 +2011,7 @@ eng:
         trail: "Trail" #?
         # trailer: "Remorque"
         # usual_vine_seedling: "Plant de vigne traditionnel"
-        # walnut_crop: "Culture d'arbre à coques"
+        # walnut_crop: "Culture d’arbre à coques"
         wheat_crop: "Wheat crop" #?
         # wine: "Vin"
         # wine_crop: "Vigne"
