--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -947,6 +947,8 @@ fra:
         figure: "Forme"
         freezing_point_temperature: "Point de solidification"
         geolocation: "Géolocalisation"
+        grains_area_density: "Grains par surface"
+        grains_count: "Grains"
         healthy: "Bonne santé"
         height: "Hauteur"
         horizontal_rotation: "Rotation horizontale"
@@ -966,7 +968,8 @@ fra:
         mammalia_reproduction_method_embryo_transplant: "Transplantation embryonaire"
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
         manganese_concentration: "Teneur en manganèse"
-        mass_area_yield: "Rendement de masse surfacique"
+        mass_area_density: "Masse par surface"
+        mass_area_yield: "Rendement en masse par surface"
         maximal_storable_easement_area: "Capacité de stockage surfacique maximale (emprise au sol)"
         maximal_storable_net_mass: "Capacité de stockage massique maximale"
         maximal_storable_net_volume: "Capacité de stockage volumique maximale"
@@ -974,6 +977,7 @@ fra:
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         molybdenum_concentration: "Teneur en molybdène"
         motor_power: "Puissance du moteur"
+        net_mass: "Masse nette"
         net_surface_area: "Surface nette"
         net_volume: "Volume net"
         nitrogen_area_density: "Unité d’azote par unité de surface"
@@ -5566,6 +5570,8 @@ fra:
         figure: "Forme"
         freezing_point_temperature: "Point de solidification"
         geolocation: "Géolocalisation"
+        grains_area_density: "Grains par surface"
+        grains_count: "Grains"
         healthy: "Bonne santé"
         height: "Hauteur"
         horizontal_rotation: "Rotation horizontale"
@@ -5585,7 +5591,8 @@ fra:
         mammalia_reproduction_method_embryo_transplant: "Transplantation embryonaire"
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
         manganese_concentration: "Teneur en manganèse"
-        mass_area_yield: "Rendement de masse surfacique"
+        mass_area_density: "Masse par surface"
+        mass_area_yield: "Rendement en masse par surface"
         maximal_storable_easement_area: "Capacité de stockage surfacique maximale (emprise au sol)"
         maximal_storable_net_mass: "Capacité de stockage massique maximale"
         maximal_storable_net_volume: "Capacité de stockage volumique maximale"
@@ -5593,6 +5600,7 @@ fra:
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         molybdenum_concentration: "Teneur en molybdène"
         motor_power: "Puissance du moteur"
+        net_mass: "Masse nette"
         net_surface_area: "Surface nette"
         net_volume: "Volume net"
         nitrogen_area_density: "Unité d’azote par unité de surface"
@@ -5659,6 +5667,8 @@ fra:
         figure: "Forme"
         freezing_point_temperature: "Point de solidification"
         geolocation: "Géolocalisation"
+        grains_area_density: "Grains par surface"
+        grains_count: "Grains"
         healthy: "Bonne santé"
         height: "Hauteur"
         horizontal_rotation: "Rotation horizontale"
@@ -5678,7 +5688,8 @@ fra:
         mammalia_reproduction_method_embryo_transplant: "Transplantation embryonaire"
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
         manganese_concentration: "Teneur en manganèse"
-        mass_area_yield: "Rendement de masse surfacique"
+        mass_area_density: "Masse par surface"
+        mass_area_yield: "Rendement en masse par surface"
         maximal_storable_easement_area: "Capacité de stockage surfacique maximale (emprise au sol)"
         maximal_storable_net_mass: "Capacité de stockage massique maximale"
         maximal_storable_net_volume: "Capacité de stockage volumique maximale"
@@ -5686,6 +5697,7 @@ fra:
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         molybdenum_concentration: "Teneur en molybdène"
         motor_power: "Puissance du moteur"
+        net_mass: "Masse nette"
         net_surface_area: "Surface nette"
         net_volume: "Volume net"
         nitrogen_area_density: "Unité d’azote par unité de surface"
@@ -5989,6 +6001,8 @@ fra:
         figure: "Forme"
         freezing_point_temperature: "Point de solidification"
         geolocation: "Géolocalisation"
+        grains_area_density: "Grains par surface"
+        grains_count: "Grains"
         healthy: "Bonne santé"
         height: "Hauteur"
         horizontal_rotation: "Rotation horizontale"
@@ -6008,7 +6022,8 @@ fra:
         mammalia_reproduction_method_embryo_transplant: "Transplantation embryonaire"
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
         manganese_concentration: "Teneur en manganèse"
-        mass_area_yield: "Rendement de masse surfacique"
+        mass_area_density: "Masse par surface"
+        mass_area_yield: "Rendement en masse par surface"
         maximal_storable_easement_area: "Capacité de stockage surfacique maximale (emprise au sol)"
         maximal_storable_net_mass: "Capacité de stockage massique maximale"
         maximal_storable_net_volume: "Capacité de stockage volumique maximale"
@@ -6016,6 +6031,7 @@ fra:
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         molybdenum_concentration: "Teneur en molybdène"
         motor_power: "Puissance du moteur"
+        net_mass: "Masse nette"
         net_surface_area: "Surface nette"
         net_volume: "Volume net"
         nitrogen_area_density: "Unité d’azote par unité de surface"
@@ -6082,6 +6098,8 @@ fra:
         figure: "Forme"
         freezing_point_temperature: "Point de solidification"
         geolocation: "Géolocalisation"
+        grains_area_density: "Grains par surface"
+        grains_count: "Grains"
         healthy: "Bonne santé"
         height: "Hauteur"
         horizontal_rotation: "Rotation horizontale"
@@ -6101,7 +6119,8 @@ fra:
         mammalia_reproduction_method_embryo_transplant: "Transplantation embryonaire"
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
         manganese_concentration: "Teneur en manganèse"
-        mass_area_yield: "Rendement de masse surfacique"
+        mass_area_density: "Masse par surface"
+        mass_area_yield: "Rendement en masse par surface"
         maximal_storable_easement_area: "Capacité de stockage surfacique maximale (emprise au sol)"
         maximal_storable_net_mass: "Capacité de stockage massique maximale"
         maximal_storable_net_volume: "Capacité de stockage volumique maximale"
@@ -6109,6 +6128,7 @@ fra:
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         molybdenum_concentration: "Teneur en molybdène"
         motor_power: "Puissance du moteur"
+        net_mass: "Masse nette"
         net_surface_area: "Surface nette"
         net_volume: "Volume net"
         nitrogen_area_density: "Unité d’azote par unité de surface"
