--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -1045,8 +1045,8 @@ fra:
         figure: "Forme"
         freezing_point_temperature: "Point de solidification"
         geolocation: "Géolocalisation"
-        # grains_area_density_in_thousand_per_hectare: "Grains area density in thousand per hectare"
-        # grains_count: "Grains count"
+        grains_area_density: "Grains par surface"
+        grains_count: "Grains"
         healthy: "Bonne santé"
         height: "Hauteur"
         horizontal_rotation: "Rotation horizontale"
@@ -1066,8 +1066,8 @@ fra:
         mammalia_reproduction_method_embryo_transplant: "Transplantation embryonaire"
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
         manganese_concentration: "Teneur en manganèse"
-        # mass_area_density: "Mass area density"
-        mass_area_yield: "Rendement de masse surfacique"
+        mass_area_density: "Masse par surface"
+        mass_area_yield: "Rendement en masse par surface"
         maximal_storable_easement_area: "Capacité de stockage surfacique maximale (emprise au sol)"
         maximal_storable_net_mass: "Capacité de stockage massique maximale"
         maximal_storable_net_volume: "Capacité de stockage volumique maximale"
@@ -1075,7 +1075,7 @@ fra:
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         molybdenum_concentration: "Teneur en molybdène"
         motor_power: "Puissance du moteur"
-        # net_mass: "Net mass"
+        net_mass: "Masse nette"
         net_surface_area: "Surface nette"
         net_volume: "Volume net"
         nitrogen_area_density: "Unité d’azote par unité de surface"
