--- a/config/locales/spa/nomenclatures.yml
+++ b/config/locales/spa/nomenclatures.yml
@@ -1139,6 +1139,8 @@ spa:
         # figure: "Forme"
         # freezing_point_temperature: "Point de solidification"
         # geolocation: "Géolocalisation"
+        # grains_area_density: "Grains par surface"
+        # grains_count: "Grains"
         # healthy: "Bonne santé"
         # height: "Hauteur"
         # horizontal_rotation: "Rotation horizontale"
@@ -1158,7 +1160,8 @@ spa:
         # mammalia_reproduction_method_embryo_transplant: "Transplantation embryonaire"
         # mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
         # manganese_concentration: "Teneur en manganèse"
-        # mass_area_yield: "Rendement de masse surfacique"
+        # mass_area_density: "Masse par surface"
+        # mass_area_yield: "Rendement en masse par surface"
         # maximal_storable_easement_area: "Capacité de stockage surfacique maximale (emprise au sol)"
         # maximal_storable_net_mass: "Capacité de stockage massique maximale"
         # maximal_storable_net_volume: "Capacité de stockage volumique maximale"
@@ -1166,6 +1169,7 @@ spa:
         # milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         # molybdenum_concentration: "Teneur en molybdène"
         # motor_power: "Puissance du moteur"
+        # net_mass: "Masse nette"
         # net_surface_area: "Surface nette"
         # net_volume: "Volume net"
         # nitrogen_area_density: "Unité d’azote par unité de surface"
