--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -562,6 +562,33 @@ fra:
         za: "Afrique Du Sud"
         zm: "Zambie"
         zw: "Zimbabwe"
+    crop_sets:
+      name: "Typologies de culture (France)"
+      attributes:
+        varieties: "Variétés"
+      items:
+        alfalfa: "Luzerne"
+        autumn_crop: "Cultures d’automne"
+        bean: "Haricot"
+        beet: "Betterave"
+        carrot: "Carotte"
+        chicory: "Endive"
+        corn: "Maïs"
+        flax: "Lin"
+        grass: "Graminée"
+        grass_leguminous: "Graminée et Legumineuse"
+        leguminous: "Legumineuse"
+        meadow: "Prairie"
+        nightshade: "Pomme de terre"
+        peas: "Pois"
+        rape: "Colza"
+        spring_crop: "Culture de printemps"
+        spring_straw_cereal: "Céréales à paille de printemps"
+        straw_cereal: "Céréales à paille"
+        sunflower: "Tournesol"
+        vetch: "Féverole"
+        wheat: "Blé"
+        winter_straw_cereal: "Céréales à paille d’hiver"
     currencies:
       name: "Monnaies"
       attributes:
@@ -936,33 +963,6 @@ fra:
         quadruped: "Quadrupède"
         spheroid: "Sphéroïde"
         vehicle: "Véhicule"
-    france_crops_sets:
-      name: "Typologies de culture (France)"
-      attributes:
-        varieties: "Variétés"
-      items:
-        alfalfa: "Luzerne"
-        autumn_crop: "Cultures d’automne"
-        bean: "Haricot"
-        beet: "Betterave"
-        carrot: "Carotte"
-        chicory: "Endive"
-        corn: "Maïs"
-        flax: "Lin"
-        grass: "Graminée"
-        grass_leguminous: "Graminée et Legumineuse"
-        leguminous: "Legumineuse"
-        meadow: "Prairie"
-        nightshade: "Pomme de terre"
-        peas: "Pois"
-        rape: "Colza"
-        spring_crop: "Culture de printemps"
-        spring_straw_cereal: "Céréales à paille de printemps"
-        straw_cereal: "Céréales à paille"
-        sunflower: "Tournesol"
-        vetch: "Féverole"
-        wheat: "Blé"
-        winter_straw_cereal: "Céréales à paille d’hiver"
     guide_natures:
       name: "Types de guide"
       items:
