--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -1470,6 +1470,7 @@ fra:
           24liter_can: "Bidon de 24 litres"
           25kg_bag: "sac de 25kg"
           50TG_bag: "sac de 50.000 grains"
+          75cl_bottle: "Bouteille de 75cl"
           bag: "sac"
           band: "Bande"
           big_rectangular_bale: "Balle ronde moyenne densité"
@@ -1487,7 +1488,7 @@ fra:
           liter: "litre"
           person: "personne"
           room: "salle"
-          # round_bale: "Round bale"
+          round_bale: "Botte ronde"
           small_rectangular_bale: "Botte rectangulaire petit format (100*40*40)"
           ton: "tonne"
           unit: "unité"
@@ -1518,6 +1519,7 @@ fra:
         beet_crop: "Culture de betterave"
         black_valley_land_parcel: "Parcelle de terre noire de vallées"
         bolt: "Boulon"
+        bottle_75cl_wine: "Bouteille de vin (75cl)"
         brassicaceae_fungicide: "Fongicide colza"
         building: "Bâtiment"
         building_division: "Pièce ou zone d’un bâtiment"
@@ -1597,7 +1599,7 @@ fra:
         granulated_insecticide_12: "Insecticide granulés"
         grape_reaper: "Machine à vendanger"
         grass: "Herbe"
-        # grass_seed_25: "Grass seed 25"
+        grass_seed_25: "Sac de 25kg de semence de prairie"
         grass_silage: "Ensilage d'herbe"
         green_compost: "Compost de déchets verts"
         guineafowl_manure: "Fumier de pintades"
@@ -1687,6 +1689,7 @@ fra:
         silty_clay_land_parcel: "Parcelle argilo-limoneuse"
         silty_clay_loam_land_parcel: "Parcelle limono-argileuse"
         small_equipment: "Petit matériel"
+        so4_vine_seedling: "Plant de vigne standard (So4)"
         sorghum_crop: "Culture de sorgho"
         sorghum_seed_25: "Semence de sorgho - sac de 25kg"
         sower: "Semoir"
@@ -1988,6 +1991,7 @@ fra:
         bar: "Bar"
         candela: "Candela"
         celsius: "Celsius"
+        centiliter: "Centilitre"
         centimeter: "Centimètre"
         cubic_meter: "Mètre cube"
         day: "Jour"
