--- a/config/locales/jpn/nomenclatures.yml
+++ b/config/locales/jpn/nomenclatures.yml
@@ -1577,6 +1577,7 @@ jpn:
           # 24liter_can: "Bidon de 24 litres"
           # 25kg_bag: "sac de 25kg"
           # 50TG_bag: "sac de 50.000 grains"
+          # 75cl_bottle: "Bouteille de 75cl"
           # bag: "sac"
           # band: "Bande"
           # big_rectangular_bale: "Balle ronde moyenne densité"
@@ -1594,6 +1595,7 @@ jpn:
           # liter: "litre"
           # person: "personne"
           # room: "salle"
+          # round_bale: "Botte ronde"
           # small_rectangular_bale: "Botte rectangulaire petit format (100*40*40)"
           # ton: "tonne"
           # unit: "unité"
@@ -1623,6 +1625,7 @@ jpn:
         # beet_crop: "Culture de betterave"
         # black_valley_land_parcel: "Parcelle de terre noire de vallées"
         # bolt: "Boulon"
+        # bottle_75cl_wine: "Bouteille de vin (75cl)"
         # brassicaceae_fungicide: "Fongicide colza"
         # building: "Bâtiment"
         # building_division: "Pièce ou zone d’un bâtiment"
@@ -1702,6 +1705,7 @@ jpn:
         # granulated_insecticide_12: "Insecticide granulés"
         # grape_reaper: "Machine à vendanger"
         # grass: "Herbe"
+        # grass_seed_25: "Sac de 25kg de semence de prairie"
         # grass_silage: "Ensilage d'herbe"
         # green_compost: "Compost de déchets verts"
         # guineafowl_manure: "Fumier de pintades"
@@ -1791,6 +1795,7 @@ jpn:
         # silty_clay_land_parcel: "Parcelle argilo-limoneuse"
         # silty_clay_loam_land_parcel: "Parcelle limono-argileuse"
         # small_equipment: "Petit matériel"
+        # so4_vine_seedling: "Plant de vigne standard (So4)"
         # sorghum_crop: "Culture de sorgho"
         # sorghum_seed_25: "Semence de sorgho - sac de 25kg"
         # sower: "Semoir"
@@ -2077,6 +2082,7 @@ jpn:
         # bar: "Bar"
         # candela: "Candela"
         # celsius: "Celsius"
+        # centiliter: "Centilitre"
         # centimeter: "Centimètre"
         # cubic_meter: "Mètre cube"
         # day: "Jour"
