--- a/config/locales/spa/nomenclatures.yml
+++ b/config/locales/spa/nomenclatures.yml
@@ -1950,6 +1950,7 @@ spa:
     production_natures:
       choices: #?
       items:
+        # administrative: "Administratif"
         # annual_frost_fallow_land: "Gel annuel"
         # apple: "Pomme"
         # asparagus: "Asperge"
@@ -1967,6 +1968,7 @@ spa:
         # lavender: "Lavande"
         # laying_hen: "Poule pondeuse"
         # lentil: "Lentille"
+        # maintenance: "Maintenance"
         # melon: "Melon"
         # milk_bull_calf: "Taurillons Lait"
         # milk_cattle: "Bovins Lait"
@@ -1988,6 +1990,7 @@ spa:
         # sunflower: "Tournesol"
         # temporary_meadow: "Prairie temporaire"
         # tobacco: "Tabac"
+        # trade: "Commerce"
         # triticale: "Triticale"
         # vine: "Vigne"
         # walnut: "Noyer"
