--- a/config/locales/jpn/nomenclatures.yml
+++ b/config/locales/jpn/nomenclatures.yml
@@ -1955,6 +1955,7 @@ jpn:
     production_natures:
       choices: #?
       items:
+        # administrative: "Administratif"
         # annual_frost_fallow_land: "Gel annuel"
         # apple: "Pomme"
         # asparagus: "Asperge"
@@ -1972,6 +1973,7 @@ jpn:
         # lavender: "Lavande"
         # laying_hen: "Poule pondeuse"
         # lentil: "Lentille"
+        # maintenance: "Maintenance"
         # melon: "Melon"
         # milk_bull_calf: "Taurillons Lait"
         # milk_cattle: "Bovins Lait"
@@ -1993,6 +1995,7 @@ jpn:
         # sunflower: "Tournesol"
         # temporary_meadow: "Prairie temporaire"
         # tobacco: "Tabac"
+        # trade: "Commerce"
         # triticale: "Triticale"
         # vine: "Vigne"
         # walnut: "Noyer"
