Adds new property-nature in nomenclature indicators

--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -992,6 +992,7 @@ fra:
         curve: "Courbe"
         datatype: "Datatype"
         # gathering: "Gathering"
+        # individual_identifier: "Individual identifier"
         interpolation: "Interpolation"
         # related_to: "Related to"
         unit: "Unité"
