--- a/config/locales/spa/procedures.yml
+++ b/config/locales/spa/procedures.yml
@@ -1,8 +1,5 @@
 spa:
-  handlers:
-    # nitrogen_unities_density: "Unités d'azote par surface"
-    # phosphorus_unities_density: "Unités de phosphore par surface"
-    # potassium_unities_density: "Unités de potassium par surface"
+  handlers: #?
   procedo:
     actions:
       # assisted_reading_task: "%{reporter} mesure %{indicator} avec %{tool}"
@@ -31,38 +28,12 @@ spa:
       # reading_task: "%{reporter} mesure %{indicator}"
       # simple_attachment: "On attèle %{carrier} et %{carried}"
       # simple_reading_task: "%{indicator} est mesuré"
-  procedures:
-    # base-all_in_one_sowing: "Semis 'tout-en-un'"
-    # base-animal_birth: "Naissance d’un animal"
-    # base-animal_treatment: "Traitement animal"
-    # base-calving_one: "Vêlage unique"
-    # base-calving_twin: "Vêlage jumeaux"
-    # base-direct_silage: "Ensilage direct"
-    # base-fuel_up: "Plein de carburant"
-    # base-grains_harvest: "Moisson"
-    # base-hoeing: "Binage"
-    # base-indirect_silage: "Ensilage indirect"
-    # base-item_replacement: "Remplacement de pièce"
-    # base-mammal_herd_milking: "Traite d'un troupeau"
-    # base-mammal_milking: "Traite d'un animal"
-    # base-manual_vine_harvest: "Vendange manuelle"
-    # base-mecanical_vine_harvest: "Vendange mécanique"
-    # base-mineral_fertilizing: "Fertilisation minérale"
-    # base-oil_replacement: "Vidange d'huile"
-    # base-organic_fertilizing: "Fertilisation organique"
-    # base-partial_spraying_on_cultivation: "Pulvérisation sur culture partielle"
-    # base-plant_grinding: "Broyage de végétaux"
-    # base-plant_mowing: "Fauchage"
-    # base-plowing: "Labour"
-    # base-raking: "Hersage"
-    # base-sowing: "Semis"
-    # base-spraying_on_cultivation: "Pulvérisation sur culture"
-    # base-straw_bunching: "Pressage de fourrages"
-    # base-superficial_plowing: "Déchaumage / Décompactage / Préparation du sol"
-    # base-vine_plant: "Plantation de vigne"
-    # base-wheat_crop: "Culture de blé (standard)"
-    # base-wine_transfer: "Transfert de vin"
-  variables:
+  procedure_handlers:
+    # dry_matter_mass_area_density: "Masse de matière sèche par surface"
+    # nitrogen_unities_density: "Unités d'azote par surface"
+    # phosphorus_unities_density: "Unités de phosphore par surface"
+    # potassium_unities_density: "Unités de potassium par surface"
+  procedure_variables:
     # baler: "Botteleuse"
     # baler_driver: "Conducteur (tracteur-botteleuse)"
     # caregiver: "Soigneur"
@@ -131,3 +102,35 @@ spa:
     # wine: "Vin"
     # wine_man: "Opérateur de chai"
     # wine_to_move: "Vin à transférer"
+  procedures:
+    # base-all_in_one_sowing: "Semis 'tout-en-un'"
+    # base-animal_birth: "Naissance d’un animal"
+    # base-animal_treatment: "Traitement animal"
+    # base-calving_one: "Vêlage unique"
+    # base-calving_twin: "Vêlage jumeaux"
+    # base-direct_silage: "Ensilage direct"
+    # base-fuel_up: "Plein de carburant"
+    # base-grains_harvest: "Moisson"
+    # base-hoeing: "Binage"
+    # base-indirect_silage: "Ensilage indirect"
+    # base-item_replacement: "Remplacement de pièce"
+    # base-mammal_herd_milking: "Traite d'un troupeau"
+    # base-mammal_milking: "Traite d'un animal"
+    # base-manual_vine_harvest: "Vendange manuelle"
+    # base-mecanical_vine_harvest: "Vendange mécanique"
+    # base-mineral_fertilizing: "Fertilisation minérale"
+    # base-oil_replacement: "Vidange d'huile"
+    # base-organic_fertilizing: "Fertilisation organique"
+    # base-partial_spraying_on_cultivation: "Pulvérisation sur culture partielle"
+    # base-plant_grinding: "Broyage de végétaux"
+    # base-plant_mowing: "Fauchage"
+    # base-plowing: "Labour"
+    # base-raking: "Hersage"
+    # base-sowing: "Semis"
+    # base-spraying_on_cultivation: "Pulvérisation sur culture"
+    # base-straw_bunching: "Pressage de fourrages"
+    # base-superficial_plowing: "Déchaumage / Décompactage / Préparation du sol"
+    # base-vine_plant: "Plantation de vigne"
+    # base-wheat_crop: "Culture de blé (standard)"
+    # base-wine_transfer: "Transfert de vin"
+  variables: #?
