--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -304,6 +304,34 @@ fra:
       items:
         cobaltihexamine: "Cobaltihexamine"
         metson: "Metson"
+    certification_labels:
+      # name: "Certification labels"
+      items:
+        # aoc: "Aoc"
+        # aop: "Aop"
+        # aor: "Aor"
+        # bio: "Bio"
+        # ig: "Ig"
+        # igp: "Igp"
+        # label_rouge: "Label rouge"
+    certifications:
+      # name: "Certifications"
+      property_natures:
+        # labels: "Labels"
+        # land: "Land"
+      choices:
+        # land: # Choices comes from nomenclature: lands
+      items:
+        # bordeaux_blanc: "Bordeaux blanc"
+        # bordeaux_blanc_avec_sucres: "Bordeaux blanc avec sucres"
+        # bordeaux_clairet: "Bordeaux clairet"
+        # bordeaux_claret: "Bordeaux claret"
+        # bordeaux_haut_benauge: "Bordeaux haut benauge"
+        # bordeaux_haut_benauge_avec_sucres: "Bordeaux haut benauge avec sucres"
+        # bordeaux_rose: "Bordeaux rose"
+        # bordeaux_rouge: "Bordeaux rouge"
+        # bordeaux_superieur_blanc: "Bordeaux superieur blanc"
+        # bordeaux_superieur_rouge: "Bordeaux superieur rouge"
     charts_of_accounts:
       name: "Plans de comptes"
       items:
@@ -827,12 +855,6 @@ fra:
         ZAR: "Rand"
         ZMK: "Kwacha zambien"
         ZWL: "Dollar zimbabwéen"
-    designation_origins:
-      name: "Appellations"
-      items:
-        aoc_bordeaux: "AOC Bordeaux"
-        aoc_bordeaux_sup: "AOC Bordeaux Supérieur"
-        aoc_cremant_de_bordeaux: "AOC Crémant de Bordeaux"
     dimensions:
       name: "Dimensions"
       property_natures:
@@ -1033,9 +1055,9 @@ fra:
         calving_ease_index: "Index de facilité de naissance"
         cation_exchange_capacity: "Capacité d’échange cationique (CEC)"
         cation_exchange_capacity_analysis_method: "Méthode d’analyse de la capacité d’échange cationique (CEC)"
+        # certification: "Certification"
         clostridial_spores_concentration: "Concentration en spores butyriques"
         copper_concentration: "Teneur en cuivre"
-        designation_origin: "Appellation"
         dry_matter_rate: "Taux de matière sèche"
         easement_area: "Emprise au sol"
         economical_milk_index: "Index économique laitier (INEL)"
@@ -1139,6 +1161,13 @@ fra:
         protozoa_disease: "Maladies virales"               # vegetal_pathology
         respiratory_problem: "Problèmes respiratoires"     # animal_pathology
         vegetal_pathology: "Pathologie végétale"           # issue
+    lands:
+      # name: "Lands"
+      items:
+        # blaye: "Blaye"
+        # bordeaux: "Bordeaux"
+        # bordeaux_haut_benauge: "Bordeaux haut benauge"
+        # bordeaux_superieur: "Bordeaux superieur"
     languages:
       name: "Langues"
       items:
