--- a/config/locales/spa/nomenclatures.yml
+++ b/config/locales/spa/nomenclatures.yml
@@ -301,6 +301,12 @@ spa:
         # cobaltihexamine: "Cobaltihexamine"
         # metson: "Metson"
       # name: "Méthodes d’analyse de la capacité d’échange cationique"
+    certification_labels:
+      items: #?
+    certifications:
+      choices: #?
+      items: #?
+      property_natures: #?
     charts_of_accounts:
       items:
         # fr_pcg82: "Plan comptable (PCG1982)"
@@ -941,12 +947,8 @@ spa:
       # name: "Monnaies"
       property_natures:
         # active: "Active"
-    designation_origins:
-      items:
-        # aoc_bordeaux: "AOC Bordeaux"
-        # aoc_bordeaux_sup: "AOC Bordeaux Supérieur"
-        # aoc_cremant_de_bordeaux: "AOC Crémant de Bordeaux"
-      # name: "Appellations"
+    designation_origins:  #?
+ #?
     dimensions:
       items:
         # amount_of_substance: "Quantité de matière"
@@ -1127,7 +1129,6 @@ spa:
         # cation_exchange_capacity_analysis_method: "Méthode d’analyse de la capacité d’échange cationique (CEC)"
         # clostridial_spores_concentration: "Concentration en spores butyriques"
         # copper_concentration: "Teneur en cuivre"
-        # designation_origin: "Appellation"
         # dry_matter_rate: "Taux de matière sèche"
         # easement_area: "Emprise au sol"
         # economical_milk_index: "Index économique laitier (INEL)"
@@ -1238,6 +1239,8 @@ spa:
       property_natures:
         # target: "Cible"
         # treatments: "Traitements"
+    lands:
+      items: #?
     languages:
       items:
         afr: "Afrikaans"
